Please enter the commit message for your changes. Lines starting

--- a/ricokali/pipeline/src/main/webapp/WEB-INF/web.xml
+++ b/ricokali/pipeline/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,11 @@
   
   <servlet-mapping>
  <servlet-name>DispatcherServlet</servlet-name>
- <url-pattern>/dispatcher/*</url-pattern> <!--  with the wildcard symbol this servlet will handle multiple requests -->  
+ <url-pattern>/dispatcher</url-pattern> <!--  with the wildcard symbol this servlet will handle multiple requests -->  
   </servlet-mapping>
+  
+ 
+  
+  
 
 </web-app>
