--- a/ricokali/pipeline/src/main/webapp/WEB-INF/web.xml
+++ b/ricokali/pipeline/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" version="2.5">
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
+xmlns="http://java.sun.com/xml/ns/javaee" 
+xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" 
+version="2.5">
+  
   <display-name>Pipeline</display-name>
   <welcome-file-list>
     <welcome-file>welcome.html</welcome-file>
@@ -17,11 +21,7 @@
   
   <servlet-mapping>
  <servlet-name>DispatcherServlet</servlet-name>
- <url-pattern>/dispatcher</url-pattern> <!--  with the wildcard symbol this servlet will handle multiple requests -->  
-  </servlet-mapping>
-  
- 
-  
-  
+ <url-pattern>/Dispatcher</url-pattern> <!--  with the wildcard symbol this servlet will handle multiple requests -->  
+  </servlet-mapping>  
 
 </web-app>
