--- a/ricokali/IMS/InventoryAngular/Dockerfile.txt
+++ b/ricokali/IMS/InventoryAngular/Dockerfile.txt
@@ -1,3 +1,22 @@
-FROM nginx:1.17.1-alpine
-COPY nginx.conf /etc/nginx/nginx.conf
-COPY /dist/InventoryAngular /usr/share/nginx/html
+# Base image
+FROM ubuntu:18.04
+
+# Installing Required Packages
+RUN     apt-get update && \
+        apt-get upgrade -y && \
+        apt-get install -y git curl
+
+# Installing NodeJS
+RUN     curl -fsSL https://deb.nodesource.com/setup_14.x | bash - && \
+        apt-get install -y nodejs
+
+# Creating the educative directory and downloading the code for the application in it
+RUN     mkdir /ricokali/IMS/InventoryAngular && \
+	cd /ricokali/IMS/InventoryAngular && \
+        git clone https://github.com/angeletti01/ricokali.git
+
+# Installing Angular cli and node modules in angular directory
+RUN     npm install -g @angular/cli && \
+        cd /ricokali/IMS/InventoryAngular && \
+        npm i
+
